# Gently

./: LICENSE  README.md  app.py  pyproject.toml
gently/: __init__.py  claude_usage.py  index.py  server.py  stats.py  tmux.py  tui.py  util.py  workspaces.py
gently/providers/: __init__.py  claude.py  codex.py  gemini.py  opencode.py
static/: index.html
static/css/: app.css
static/js/: app.js  export.js  loading.js  messages.js  newconv.js  palette.js  parsers.js  render.js  search.js  sidebar.js  state.js  terminal.js  util.js  workspace.js  workspaces.js
